Upload finishing touches to all deliverables

--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -102,17 +102,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18ab463c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# review the collections in our new database (duplicate in starter code)\n",
-    "print(db.list_collection_names())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "6a0d92df",
    "metadata": {},
@@ -167,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -510,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
@@ -520,7 +509,7 @@
        "UpdateResult({'n': 38786, 'nModified': 38786, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,8 +517,8 @@
    "source": [
     "# Change the data type from String to Decimal for longitude and latitude\n",
     "establishments.update_many({}, [\n",
-    "    {'$set':{\"geocode.latitude\": {'$toDouble':\"$geocode.latitude\"},\n",
-    "             \"geocode.longitude\":{'$toDouble':\"$geocode.longitude\"}}}\n",
+    "    {'$set':{\"geocode.latitude\": {'$toDecimal':\"$geocode.latitude\"},\n",
+    "             \"geocode.longitude\":{'$toDecimal':\"$geocode.longitude\"}}}\n",
     "])"
    ]
   },
@@ -591,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
@@ -599,48 +588,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'East Cliff Pavilion',\n",
-      " 'AddressLine2': 'Wear Bay Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Pavilion',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
-      " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.765489457773,\n",
-      " 'FHRSID': 1043695,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
-      " 'LocalAuthorityCode': '188',\n",
-      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
-      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
-      " 'NewRatingPending': False,\n",
-      " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6BL',\n",
-      " 'RatingDate': '2018-04-04T00:00:00',\n",
-      " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': 5,\n",
-      " 'RightToReply': '',\n",
-      " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('65ecce80da99609072cd8f2d'),\n",
-      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
-      "            'rel': 'self'}],\n",
-      " 'meta': {'dataSource': None,\n",
-      "          'extractDate': '0001-01-01T00:00:00',\n",
-      "          'itemCount': 0,\n",
-      "          'pageNumber': 0,\n",
-      "          'pageSize': 0,\n",
-      "          'returncode': None,\n",
-      "          'totalCount': 0,\n",
-      "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+      "The data type for the following are:\n",
+      "      latitude: <class 'bson.decimal128.Decimal128'>\n",
+      "      longitude: <class 'bson.decimal128.Decimal128'>\n",
+      "      RatingValue: <class 'int'>\n"
      ]
     }
    ],
    "source": [
     "# Check that the coordinates and rating value are now numbers\n",
-    "pprint(establishments.find_one())"
+    "doc_to_check = establishments.find_one()\n",
+    "lat_data_type = type(doc_to_check[\"geocode\"][\"latitude\"])\n",
+    "lon_data_type = type(doc_to_check[\"geocode\"][\"longitude\"])\n",
+    "rate_data_type = type(doc_to_check[\"RatingValue\"])\n",
+    "print(f\"\"\"The data type for the following are:\n",
+    "      latitude: {lat_data_type}\n",
+    "      longitude: {lon_data_type}\n",
+    "      RatingValue: {rate_data_type}\"\"\")"
    ]
   }
  ],
