--- a/NoSQL_analysis.ipynb
+++ b/NoSQL_analysis.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
        "[10 rows x 38 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "07e24ccb",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "[10 rows x 38 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -1505,7 +1505,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "4eeb227e",
    "metadata": {},
    "outputs": [
@@ -1536,16 +1536,16 @@
      "text": [
       "Number of documents in result: 55\n",
       "The first 10 results are:\n",
-      "[{'_id': {'LocalAuthorityName': 'Thanet'}, 'count': 1130},\n",
-      " {'_id': {'LocalAuthorityName': 'Greenwich'}, 'count': 882},\n",
-      " {'_id': {'LocalAuthorityName': 'Maidstone'}, 'count': 713},\n",
-      " {'_id': {'LocalAuthorityName': 'Newham'}, 'count': 711},\n",
-      " {'_id': {'LocalAuthorityName': 'Swale'}, 'count': 686},\n",
-      " {'_id': {'LocalAuthorityName': 'Chelmsford'}, 'count': 680},\n",
-      " {'_id': {'LocalAuthorityName': 'Medway'}, 'count': 672},\n",
-      " {'_id': {'LocalAuthorityName': 'Bexley'}, 'count': 607},\n",
-      " {'_id': {'LocalAuthorityName': 'Southend-On-Sea'}, 'count': 586},\n",
-      " {'_id': {'LocalAuthorityName': 'Tendring'}, 'count': 542}]\n"
+      "[{'_id': 'Thanet', 'count': 1130},\n",
+      " {'_id': 'Greenwich', 'count': 882},\n",
+      " {'_id': 'Maidstone', 'count': 713},\n",
+      " {'_id': 'Newham', 'count': 711},\n",
+      " {'_id': 'Swale', 'count': 686},\n",
+      " {'_id': 'Chelmsford', 'count': 680},\n",
+      " {'_id': 'Medway', 'count': 672},\n",
+      " {'_id': 'Bexley', 'count': 607},\n",
+      " {'_id': 'Southend-On-Sea', 'count': 586},\n",
+      " {'_id': 'Tendring', 'count': 542}]\n"
      ]
     }
    ],
@@ -1555,7 +1555,7 @@
     "match_query = {'$match': {\"scores.Hygiene\": 0}}\n",
     "\n",
     "# 2. Groups the matches by Local Authority\n",
-    "group_query = {'$group': {'_id': {'LocalAuthorityName': '$LocalAuthorityName'},\n",
+    "group_query = {'$group': {'_id': '$LocalAuthorityName',\n",
     "                          'count': {'$sum': 1}}}\n",
     "\n",
     "# 3. Sorts the matches from highest to lowest\n",
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "d8aab364",
    "metadata": {},
    "outputs": [
@@ -1605,80 +1605,80 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>_id</th>\n",
        "      <th>count</th>\n",
-       "      <th>_id.LocalAuthorityName</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1130</td>\n",
        "      <td>Thanet</td>\n",
+       "      <td>1130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>882</td>\n",
        "      <td>Greenwich</td>\n",
+       "      <td>882</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>713</td>\n",
        "      <td>Maidstone</td>\n",
+       "      <td>713</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>711</td>\n",
        "      <td>Newham</td>\n",
+       "      <td>711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>686</td>\n",
        "      <td>Swale</td>\n",
+       "      <td>686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>680</td>\n",
        "      <td>Chelmsford</td>\n",
+       "      <td>680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>672</td>\n",
        "      <td>Medway</td>\n",
+       "      <td>672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>607</td>\n",
        "      <td>Bexley</td>\n",
+       "      <td>607</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>586</td>\n",
        "      <td>Southend-On-Sea</td>\n",
+       "      <td>586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>542</td>\n",
        "      <td>Tendring</td>\n",
+       "      <td>542</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   count _id.LocalAuthorityName\n",
-       "0   1130                 Thanet\n",
-       "1    882              Greenwich\n",
-       "2    713              Maidstone\n",
-       "3    711                 Newham\n",
-       "4    686                  Swale\n",
-       "5    680             Chelmsford\n",
-       "6    672                 Medway\n",
-       "7    607                 Bexley\n",
-       "8    586        Southend-On-Sea\n",
-       "9    542               Tendring"
+       "               _id  count\n",
+       "0           Thanet   1130\n",
+       "1        Greenwich    882\n",
+       "2        Maidstone    713\n",
+       "3           Newham    711\n",
+       "4            Swale    686\n",
+       "5       Chelmsford    680\n",
+       "6           Medway    672\n",
+       "7           Bexley    607\n",
+       "8  Southend-On-Sea    586\n",
+       "9         Tendring    542"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,7 +1688,7 @@
     "est_count_zero_hygiene = pd.json_normalize(results)\n",
     "\n",
     "# Display the number of rows in the DataFrame\n",
-    "print(\"The number of rows:\", len(est_count_zero_hygiene[\"_id.LocalAuthorityName\"].unique()))\n",
+    "print(\"The number of rows:\", len(est_count_zero_hygiene[\"_id\"].unique()))\n",
     "\n",
     "# Display the first 10 rows of the DataFrame\n",
     "est_count_zero_hygiene.head(10)"
